--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="bg-custom-yellow purebackground">
 <head>
   <meta charset="utf-8">
   <title>PrestABook</title>
